Cleaned up the poms so parent pom handles more